# HSFML

./: LICENSE  README.md  hsfml.cabal
cbits/SFML/Audio/: ListenerWrapper.c  MusicWrapper.c  SoundBufferWrapper.c  SoundRecorderWrapper.c  SoundStreamWrapper.c  SoundWrapper.c
cbits/SFML/Graphics/: CircleShapeWrapper.c  ColorWrapper.c  ConvexShapeWrapper.c  FontWrapper.c  GlyphWrapper.c  ImageWrapper.c  RectangleShapeWrapper.c  RenderStatesWrapper.c  RenderTextureWrapper.c  RenderWindowWrapper.c  ShaderWrapper.c  ShapeWrapper.c  SpriteWrapper.c  TextWrapper.c  TextureWrapper.c  TransformWrapper.c  TransformableWrapper.c  VertexArrayWrapper.c  VertexWrapper.c  ViewWrapper.c
cbits/SFML/System/: ClockWrapper.c  InputStreamWrapper.c  SleepWrapper.c  TimeWrapper.c
cbits/SFML/Window/: MouseWrapper.c  VideoModeWrapper.c  WindowWrapper.c
examples/: Drag.hs  FRP.hs  Hsfml-Gtk.hs  Pong.hs
include/SFML/Audio/: ListenerWrapper.h  MusicWrapper.h  SoundBufferWrapper.h  SoundRecorderWrapper.h  SoundRecorder_stub.h  SoundStreamWrapper.h  SoundStream_stub.h  SoundWrapper.h
include/SFML/Graphics/: CircleShapeWrapper.h  ColorWrapper.h  ConvexShapeWrapper.h  FontWrapper.h  GlyphWrapper.h  ImageWrapper.h  RectangleShapeWrapper.h  RenderStatesWrapper.h  RenderTextureWrapper.h  RenderWindowWrapper.h  ShaderWrapper.h  ShapeWrapper.h  Shape_stub.h  SpriteWrapper.h  TextWrapper.h  TextureWrapper.h  TransformWrapper.h  TransformableWrapper.h  VertexArrayWrapper.h  VertexWrapper.h  ViewWrapper.h
include/SFML/System/: ClockWrapper.h  InputStreamWrapper.h  InputStream_stub.h  SleepWrapper.h  TimeWrapper.h
include/SFML/Window/: MouseWrapper.h  VideoModeWrapper.h  WindowWrapper.h
src/SFML/Audio/: Listener.hs  Music.hs  Sound.hs  SoundBuffer.hs  SoundBufferRecorder.hs  SoundRecorder.hs  SoundStatus.hs  SoundStream.hs
src/SFML/Audio/Internal/: Listener.chs  Music.chs  Sound.chs  SoundBuffer.chs  SoundBufferRecorder.chs  SoundRecorder.chs  SoundStatus.chs  SoundStream.chs  Types.chs
src/SFML/Graphics/: BlendMode.hs  Circle.hs  Color.hs  Convex.hs  Drawable.hs  Font.hs  Glyph.hs  Image.hs  PrimitiveType.hs  Rect.hs  Rectangle.hs  RenderStates.hs  RenderTexture.hs  RenderWindow.hs  Shader.hs  Shape.hs  ShapeLike.hs  Sprite.hs  Text.hs  Texture.hs  Transform.hs  Transformable.hs  TransformableLike.hs  Vertex.hs  VertexArray.hs  View.hs
src/SFML/Graphics/Internal/: BlendMode.chs  Circle.chs  Color.chs  Convex.chs  Font.chs  Glyph.chs  Image.chs  PrimitiveType.chs  Rect.chs  Rectangle.chs  RenderStates.chs  RenderTexture.chs  RenderWindow.chs  Shader.chs  Shape.chs  Sprite.chs  Text.chs  Texture.chs  Transform.chs  Transformable.chs  Types.chs  Vertex.chs  VertexArray.chs  View.chs
src/SFML/System/: Clock.hs  InputStream.hs  Mutex.hs  Sleep.hs  Thread.hs  Time.hs  Vector.hs
src/SFML/System/Internal/: Clock.chs  InputStream.chs  Mutex.chs  Sleep.chs  Thread.chs  Time.chs  Types.chs  Vector2.chs  Vector3.chs
src/SFML/Utility/: Foreign.hs
src/SFML/Window/: Context.hs  Event.hs  Joystick.hs  Keyboard.hs  Mouse.hs  VideoMode.hs  Window.hs  WindowHandle.hs  WindowLike.hs
src/SFML/Window/Internal/: Context.chs  Event.chs  Joystick.chs  Keyboard.chs  Mouse.chs  Types.chs  VideoMode.chs  Window.chs  WindowHandle.chs
test/: TestSuite.hs
test/SFML/Graphics/Color/: Tests.hs
test/SFML/Graphics/Rect/: Tests.hs
test/SFML/System/Time/: Tests.hs
